--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.password=password
 
 #hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+#in produzione meglio false
+spring.jpa.hibernate.ddl-auto=update 
 
 #date formatting
 spring.mvc.format.date=yyyy-MM-dd
